Make resp label optional and fix spacing issues

--- a/app/src/pages/about/section/section.module.css
+++ b/app/src/pages/about/section/section.module.css
@@ -1,12 +1,15 @@
 .section {
     margin-bottom: 0;
+    padding: 22.5px 0;
 }
 
 .title {
     font-family: -apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol',sans-serif;
     text-transform: uppercase;
+    margin: 0;
+    margin-bottom: 7.5px;
 }
 
 .info {
-    padding: 15px 0px;
+    padding: 7.5px 0px;
 }
